--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&display=swap");
 
+* {
+  --shadow-1: rgba(0, 0, 0, 0.1);
+  --shadow-2: rgba(0, 0, 0, 0.2);
+  --shadow-inset: rgba(255, 255, 255, 0.5);
+}
+
 *:focus {
   outline: none;
 }
@@ -39,6 +45,7 @@ body {
 nav {
   --decoration-left: 53%;
   --decoration-width: 0;
+  z-index: 50;
 }
 
 nav::after {
@@ -80,4 +87,33 @@ nav::after {
 
 #nprogress .bar {
   background: #319528 !important;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 55;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 0.693);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  max-width: 350px;
+  border-radius: 10px;
+  box-shadow: 0 12px 28px 0 var(--shadow-2), 0 2px 4px 0 var(--shadow-1),
+    inset 0 0 0 1px var(--shadow-inset);
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 19px;
+  font-weight: bold;
+  cursor: pointer;
 }
