--- a/static/css/style.css
+++ b/static/css/style.css
@@ -103,11 +103,16 @@ nav::after {
 
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto;
   max-width: 350px;
+  width: 100%;
   border-radius: 10px;
   box-shadow: 0 12px 28px 0 var(--shadow-2), 0 2px 4px 0 var(--shadow-1),
     inset 0 0 0 1px var(--shadow-inset);
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .close {
